--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "phaser": "^3.50.0"
+    "phaser": "^3.50.0",
+    "phaser-navmesh": "^2.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.0.2",
